force-app/main/default/objects/DA_Requirement__b/DA_Requirement__b.object-meta.xml
<CustomObject>
    <label>DA Requirement</label>
    <pluralLabel>DA Requirement</pluralLabel>
</CustomObject>