force-app/main/default/objects/DA_Requirement__b/fields/BPMN_Required__c.field-meta.xml
<CustomField>
    <fullName>BPMN_Required__c</fullName>
    <label>BPMN Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>