force-app/main/default/objects/DA_Requirement__b/fields/Capability_Streams__c.field-meta.xml
<CustomField>
    <fullName>Capability_Streams__c</fullName>
    <label>Capability Streams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>