force-app/main/default/objects/DA_Requirement__b/fields/Functional_Groups__c.field-meta.xml
<CustomField>
    <fullName>Functional_Groups__c</fullName>
    <label>Functional Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>