force-app/main/default/objects/DA_Requirement__b/fields/Prototyped__c.field-meta.xml
<CustomField>
    <fullName>Prototyped__c</fullName>
    <label>Prototyped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>