force-app/main/default/objects/DA_Requirement__b/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Related_Case1564546226790</relationshipName>
    <type>Lookup</type>
</CustomField>