force-app/main/default/objects/DA_Requirement__b/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <label>Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requested_by1564546226803</relationshipName>
    <type>Lookup</type>
</CustomField>