force-app/main/default/objects/DA_Requirement__b/fields/S_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>S_LastModifiedById__c</fullName>
    <label>Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastModifiedBy1564546226780</relationshipName>
    <type>Lookup</type>
</CustomField>