force-app/main/default/objects/DA_Requirement__b/fields/Solution_Approved_for_Drop__c.field-meta.xml
<CustomField>
    <fullName>Solution_Approved_for_Drop__c</fullName>
    <label>Solution Approved for Drop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>