force-app/main/default/objects/DA_Requirement__b/fields/Solution_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Solution_Complexity__c</fullName>
    <label>Solution Complexity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>